Created Our begining section and work vid

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="Home">
         <!-- navigation bar -->
         <nav>
-            <h2><a href="index.html">Wooster</a></h2>
+            <h2><a href="index.html" title="Home Page">Wooster</a></h2>
             
             <div class="links" title="Click!">
                 <span class="icon">
@@ -27,7 +27,7 @@
 
                 <!-- Unordered List -->
             <ul>
-                <li><a href="#" title="home">Home</a></li>
+                <li><a href="#Home" title="home">Home</a></li>
                 <li><a href="#" title="portfolio">portfolio</a></li>
                 <li><a href="#" title="about">about</a></li>
                 <li><a href="#" title="contact">contact</a></li>
@@ -43,5 +43,31 @@
         </div>
     </header>
     <!--// Header //-->
+
+    <!-- Section 1 -->
+    <section class="our-beginning">
+        <div class="our-beginning-container">
+            <div class="row-our-beginning">
+                <div class="col-our-beginning">
+                    <h4>our beginning</h4>
+                    <h6>Closer to the star</h6>
+                    <hr>
+                    <p>Sometimes I’m amazed that I spend my days creating magic and fantasy and that people buy it. It’s like connecting with the inner child in me; I’m just having a great time, and I’m chuckling to myself that this is really happening, that I can do this with my life.</p>
+                    <p>A designer, like an archaeologist or geologist; researches, uncovers and adds context to precious, overlooked treasures by digging deep beneath the surface.</p>
+                    <a href="">see portfolio</a>
+                </div>
+                <div class="col-our-beginning">
+                    <img src="images/typewriter.jpg" alt="type writer" title="type writer">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Section 1 -->
+
+    <section class="vid">
+        <video loop autoplay>
+            <source src="images/1477672_People_Business_3840x2160.mov">
+        </video>
+    </section>
 </body>
 </html>
