modified vid and Added Portfolio section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <!-- Unordered List -->
             <ul>
                 <li><a href="#Home" title="home">Home</a></li>
-                <li><a href="#" title="portfolio">portfolio</a></li>
+                <li><a href="#portfolio" title="portfolio">portfolio</a></li>
                 <li><a href="#" title="about">about</a></li>
                 <li><a href="#" title="contact">contact</a></li>
             </ul>
@@ -62,12 +62,33 @@
             </div>
         </div>
     </section>
+    
     <!-- Section 1 -->
-
     <section class="vid">
         <video loop autoplay>
-            <source src="images/1477672_People_Business_3840x2160.mov">
+            <source src="images/work-vid.mp4">
         </video>
     </section>
+    <!-- //Section 1 //-->
+
+    <!-- section 2 -->
+    <section class="portfolio" id="portfolio">
+        <div class="portfolio-container">
+            <h3>portfolio</h3>
+            <h6>see our best work so far</h6>
+            <hr>
+            <p>If the reader notices the interior page design of a book — even if he or she likes what they see — I've missed, because I distracted them from their reading.</p>
+            <div class="portfolio-links">
+                <ul>
+                    <li><a href="#">All</a></li>
+                    <li><a href="#">mockups</a></li>
+                    <li><a href="#">devices</a></li>
+                    <li><a href="#">frame</a></li>
+                    <li><a href="#">template</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- //section 2// -->
 </body>
 </html>
