starting create Quote section

--- a/index.html
+++ b/index.html
@@ -90,5 +90,17 @@
         </div>
     </section>
     <!-- //section 2// -->
+
+    <!-- section 3 -->
+    <section class="Quote">
+        <div class="Quote-container">
+            <i class="fa-solid fa-quote-left" style="color: #000000;"></i>            
+            <p>
+                THE SPACE BETWEEN AN IDEA AND A CONCEPT IS YOUR LIPS. IF YOU CAN’T SAY IT OUT LOUD YOU CAN’T DO IT.
+            </p>
+        </div>
+    </section>
+    <!--// section 3 //-->
+
 </body>
 </html>
