--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <ul>
                 <li><a href="#Home" title="home">Home</a></li>
                 <li><a href="#portfolio" title="portfolio">portfolio</a></li>
-                <li><a href="#" title="about">about</a></li>
-                <li><a href="#" title="contact">contact</a></li>
+                <li><a href="#about" title="about">about</a></li>
+                <li><a href="#contact" title="contact">contact</a></li>
             </ul>
             <!--// Unordered List //-->
             </div>
@@ -65,7 +65,7 @@
     
     <!-- Section 1 -->
     <section class="vid">
-        <video loop autoplay>
+        <video loop autoplay muted>
             <source src="images/work-vid.mp4">
         </video>
     </section>
@@ -94,13 +94,140 @@
     <!-- section 3 -->
     <section class="Quote">
         <div class="Quote-container">
-            <i class="fa-solid fa-quote-left" style="color: #000000;"></i>            
+            <i class="fas fa-quote-right"></i>           
             <p>
                 THE SPACE BETWEEN AN IDEA AND A CONCEPT IS YOUR LIPS. IF YOU CAN’T SAY IT OUT LOUD YOU CAN’T DO IT.
             </p>
+            <i class="fas fa-quote-left"></i>
         </div>
     </section>
     <!--// section 3 //-->
+
+    <!-- Section 4 -->
+    <section class="About" id="about">
+        <div class="about-container">
+            <div class="row-1">
+                <h2>aBout us</h2>
+                <span>who we are <i class="fas fa-question"></i></span>
+                <hr>
+                <p>
+                    The way a team plays as a whole determines its success. You may have the greatest bunch of individual stars in the world, but if they don’t play together, the club won’t be worth a dime.
+                </p>
+            </div>
+            <div class="row-2">
+                <div class="col-team">
+                    <div class="card">
+                        <img src="images/team/img1.jpg" alt="team">
+                        <h6>John Smith</h6>
+                    </div>
+                </div>
+                <div class="col-team">
+                    <div class="card">
+                        <img src="images/team/img2.jpg" alt="team">
+                        <h6>Emily Davis</h6>
+                    </div>
+                </div>
+                <div class="col-team">
+                    <div class="card">
+                        <img src="images/team/img3.jpg" alt="team">
+                        <h6>Michael Johnson</h6>
+                    </div>
+                </div>
+                <div class="col-team">
+                    <div class="card">
+                        <img src="images/team/img4.jpg" alt="team">
+                        <h6>Sarah Anderson</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="row-3">
+                <div class="about-us-col">
+                    <h3>about us</h3>
+                    <p>
+                        I like jumping back and forth between a few different things to let my subconscious chew on one problem while my conscious works on something else.
+                    </p>
+                </div>
+                <div class="about-us-col">
+                    <h3>WHO WE ARE</h3>
+                    <p>
+                        I like jumping back and forth between a few different things to let my subconscious chew on one problem while my conscious works on something else.
+                    </p>
+                </div>
+                <div class="about-us-col">
+                    <h3>WHY WE DO THIS</h3>
+                    <p>
+                        I like jumping back and forth between a few different things to let my subconscious chew on one problem while my conscious works on something else.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--// Section 4 //-->
+
+    <!-- Section 5 -->
+    <section class="Newsletter">
+        <div class="newsletter-container">
+            <h4>Subscribe to our newsletter</h4>
+            <!-- form for newsletters -->
+            <form action="#" autocomplete="on">
+                <div class="box-input">
+                    <input type="email" name="User-Email" placeholder="Enter your e-mail address... " required>
+                    <input type="submit" value="Subscribe">
+                </div>
+            </form>
+        </div>
+    </section>
+    <!--// Section 5 //-->
+
+    <!-- Section 6 -->
+    <section class="Contact-us" id="contact">
+        <div class="Contact-us-container">
+            <div class="contact-us-row-1">
+                <h2>Contact us</h2>
+                <span>WE LOVE TALKING</span>
+                <hr>
+                <p>
+                    If the reader notices the interior page design of a book – even if he or she likes what they see – I’ve missed, because I distracted them from their reading.                </p>
+            </div>
+            <div class="contact-us-row-2">
+                <div class="contact-us-col">
+                    <i class="fas fa-envelope"></i>
+                    <span><a href="mailto:qutaiba.makahleh@gmail.com" target="_blank" title="e-mail address">qutaiba.makahleh@gmail.com</a></span>
+                </div>
+                <div class="contact-us-col">
+                    <i class="fas fa-map-pin"></i>
+                    <span>
+                        <a href="https://maps.app.goo.gl/FizRmQjyi6mv5iuF6" target="_blank" title="address">Zarqa-Jordan <br> Street 36</a>
+                        <!--  -->
+                    </span>
+                </div>
+                <div class="contact-us-col">
+                    <i class="fas fa-phone" ></i>
+                    <span><a href="tel:+962795999114" target="_blank" title="Phone Number">+962 795 999 114</a></span>
+                </div>
+            </div>
+            <div class="contact-us-row-3">
+                <form class="form-message" action="#" autocomplete="on">
+                    <div class="col-form">
+                        <div class="box-input">
+                            <input type="text" name="user-subject" placeholder="subject" required>
+                            <input type="text" name="user-name" placeholder="name" required>
+                            <input type="email" name="User-Email" placeholder="email " required>
+                        </div>
+                    </div>
+                    <div class="col-form">
+                        <input type="text" name="user-massage" placeholder="massage goes here..." required>
+                    </div>
+                    <!-- <div class="submit-button">
+                        <input type="submit" value="send">
+                    </div> -->
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- Section 6 -->
+
+    
 
 </body>
 </html>
