Finshed all task

--- a/index.html
+++ b/index.html
@@ -198,7 +198,6 @@
                     <i class="fas fa-map-pin"></i>
                     <span>
                         <a href="https://maps.app.goo.gl/FizRmQjyi6mv5iuF6" target="_blank" title="address">Zarqa-Jordan <br> Street 36</a>
-                        <!--  -->
                     </span>
                 </div>
                 <div class="contact-us-col">
@@ -207,25 +206,42 @@
                 </div>
             </div>
             <div class="contact-us-row-3">
-                <form class="form-message" action="#" autocomplete="on">
-                    <div class="col-form">
-                        <div class="box-input">
-                            <input type="text" name="user-subject" placeholder="subject" required>
-                            <input type="text" name="user-name" placeholder="name" required>
-                            <input type="email" name="User-Email" placeholder="email " required>
+                <form action="#" autocomplete="on">
+                    <div class="form-row">
+                        <div class="col-form-1">
+                            <input type="text" name="user-subject" placeholder="Subject" required>
+                            <input type="text" class="mar" name="user-name" placeholder="Name" required>
+                            <input type="email" name="User-Email" placeholder="Email " required>
+                        </div>
+                        <div class="col-form-2">
+                            <input type="text-2" name="user-massage" placeholder="Massage goes here..." required>
                         </div>
                     </div>
-                    <div class="col-form">
-                        <input type="text" name="user-massage" placeholder="massage goes here..." required>
-                    </div>
-                    <!-- <div class="submit-button">
+                    <div class="col-form-submit">
                         <input type="submit" value="send">
-                    </div> -->
+                    </div>
                 </form>
             </div>
         </div>
     </section>
     <!-- Section 6 -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-container">
+            <img src="images/logo-white.png" alt="logo">
+            <div class="social-links">
+                <ul>
+                    <li><a href="#" title="Facebook"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#" title="linkedin"><i class="fa-brands fa-linkedin"></i></a></li>
+                    <li><a href="#" title="github"><i class="fa-brands fa-github"></i></a></li>
+                    <li><a href="#" title="twitter"><i class="fa-brands fa-x-twitter"></i></a></li>
+                </ul>
+            </div>
+            <h4>made with <i class="fa-regular fa-heart"></i> by qutaiba qusai makahleh</h4>
+        </div>
+    </footer>
+    <!-- Footer -->
 
     
 
